{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 19,
  "lineage": "3d5ba5d7-12c4-9d8b-d96f-1def8002c53a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:210288123993:vpc/vpc-072018124516d1960",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-080bd12326780adc4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08edcc424fbfe58db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-072018124516d1960",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-028a71fd31bb8ecc4",
            "owner_id": "210288123993"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "warmup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:210288123993:instance/i-0759a4635a9fca9c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0759a4635a9fca9c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ace4c47690d806e",
            "private_dns": "ip-172-31-40-231.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.231",
            "public_dns": "ec2-3-134-103-75.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.103.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-055e01890da484e64",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-warmup-instance"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0319875f7c7aadfc2",
            "tags": {
              "Name": "warmup_instance"
            },
            "tags_all": {
              "Name": "warmup_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c160116a1d9209c"
            ]
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "warmup-asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:210288123993:loadbalancer/app/terraform-asg-warmup-asg/e45ff3bf83d3128f",
            "arn_suffix": "app/terraform-asg-warmup-asg/e45ff3bf83d3128f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-asg-warmup-asg-1304529999.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:210288123993:loadbalancer/app/terraform-asg-warmup-asg/e45ff3bf83d3128f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-warmup-asg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e4679abf4936312"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0319875f7c7aadfc2"
              },
              {
                "subnet_id": "subnet-0339f3a9f3d7e09f9"
              },
              {
                "subnet_id": "subnet-03a13c7cb0df97226"
              }
            ],
            "subnets": [
              "subnet-0319875f7c7aadfc2",
              "subnet-0339f3a9f3d7e09f9",
              "subnet-03a13c7cb0df97226"
            ],
            "vpc_id": "vpc-072018124516d1960",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:210288123993:listener/app/terraform-asg-warmup-asg/e45ff3bf83d3128f/802be70bde850429",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:210288123993:listener/app/terraform-asg-warmup-asg/e45ff3bf83d3128f/802be70bde850429",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:210288123993:loadbalancer/app/terraform-asg-warmup-asg/e45ff3bf83d3128f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.warmup-asg",
            "aws_security_group.alb",
            "data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:210288123993:targetgroup/terraform-asg-warmup-asg/5bc0049bcf869aa8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:210288123993:listener-rule/app/terraform-asg-warmup-asg/e45ff3bf83d3128f/802be70bde850429/4ee773de07081a38",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:210288123993:listener-rule/app/terraform-asg-warmup-asg/e45ff3bf83d3128f/802be70bde850429/4ee773de07081a38",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:210288123993:listener/app/terraform-asg-warmup-asg/e45ff3bf83d3128f/802be70bde850429",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.warmup-asg",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:210288123993:targetgroup/terraform-asg-warmup-asg/5bc0049bcf869aa8",
            "arn_suffix": "targetgroup/terraform-asg-warmup-asg/5bc0049bcf869aa8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:210288123993:targetgroup/terraform-asg-warmup-asg/5bc0049bcf869aa8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-asg-warmup-asg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-072018124516d1960"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:210288123993:security-group/sg-05e4679abf4936312",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05e4679abf4936312",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-warmup-asg-alb",
            "name_prefix": "",
            "owner_id": "210288123993",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072018124516d1960"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:210288123993:security-group/sg-09c160116a1d9209c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09c160116a1d9209c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-warmup-instance",
            "name_prefix": "",
            "owner_id": "210288123993",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072018124516d1960"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}